# excel_mcp_server_python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup-dev.bat  start-server.bat  test_fastmcp.py  test_uv_setup.py
scripts/: server_manager.py
src/: index.py
src/excel_mcp_server/: __init__.py  main.py
test/: excel_integration_test.py  run_all_tests.py  test_tools_details.py  test_tools_list.py  test_uv_setup.py  tools_list_test.py
test/output/: README.md  sample_workbook.xlsx  test-export.csv  test-workbook.xlsx
