[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-mcp-server-python"
version = "1.0.0"
description = "Model Context Protocol server for Excel automation - Python版"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]
keywords = ["mcp", "excel", "automation", "spreadsheet"]
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
excel-mcp-server = "src.index:main"

[project.urls]
Homepage = "https://github.com/yourusername/excel-mcp-server-python"
Repository = "https://github.com/yourusername/excel-mcp-server-python"
Issues = "https://github.com/yourusername/excel-mcp-server-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
